KShortcutsEditor: hide local shortcuts columns when needed

33339de5626242b586db63de88666a31023bcba3 resulted in the global
shortcuts columns being automatically hidden when the dialog has no
global shortcuts. However it did not do the reverse, which is also
possible. For example, KWin effects have only global shortcuts and no
local shortcuts (local shortcuts don't even make sense there).

In such a case, we should hide the local shortcuts columns and only show
the global ones.

BUG: 474570
FIXED-IN: 6.0